# Buddio

./: .gitignore  AGENTS.md  Cargo.toml  README.md  index.html  package-lock.json  package.json  settings.html  vite.config.ts  vitest.config.ts
.claude/: settings.local.json
.github/workflows/: ci.yml  release.yml
docs/plans/: 2026-03-10-claude-oauth-authentication-design.md  2026-03-10-claude-oauth-authentication.md
golaunch-cli/: Cargo.toml
golaunch-cli/src/: main.rs
golaunch-core/: Cargo.toml
golaunch-core/src/: db.rs  lib.rs  models.rs
golaunch-mcp/: Cargo.toml
golaunch-mcp/src/: main.rs  server.rs
sidecar/: package-lock.json  package.json
sidecar/src/: index.ts  mcp.ts  protocol.ts
src/: App.tsx  SettingsApp.tsx  index.css  settings.tsx  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/.claude/: settings.local.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  context.rs  hotkey.rs  lib.rs  main.rs
src/components/: AgentResponse.tsx  AgentSettings.tsx  AgentStatusIndicator.tsx  CategoryBar.tsx  CommandOutput.tsx  CommandSuggestionPanel.tsx  ConfirmDialog.tsx  ContextMenu.tsx  ContextPanel.tsx  ItemList.tsx  ItemRow.tsx  ParameterHint.tsx  PermissionDialog.tsx  SearchBar.tsx  SlashCommandList.tsx  StatusBar.tsx  Toast.tsx  UpdateToast.tsx
src/hooks/: useAcpAgent.ts  useAgent.ts  useLaunchContext.ts  useLauncher.ts  useUpdateChecker.ts
tests/e2e/: wdio.conf.ts
tests/unit/: App.test.tsx  (+2 more)
website/: astro.config.mjs  package-lock.json  package.json  tailwind.config.mjs
(+41 files in other folders)
