[package]
name = "buddio-cli"
version = "0.1.0"
edition = "2021"
description = "CLI tool for managing Buddio items"

[[bin]]
name = "buddio-cli"
path = "src/main.rs"

[dependencies]
golaunch-core = { path = "../golaunch-core" }
clap = { version = "4", features = ["derive"] }
serde_json = "1"
open = "5"
